# quest-hook-rs

./: .gitattributes  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  crates.js  rust-toolchain  search-index.js  settings.html  source-files.js
inline_hook/: Cargo.toml  all.html  build.rs  fn.A64HookFunction.html  index.html  sidebar-items.js  struct.Hook.html
inline_hook/And64InlineHook/: And64InlineHook.hpp
inline_hook/detour/: struct.Hook.html
inline_hook/src/: aarch64_linux_android.rs  armv7_linux_androideabi.rs  detour.rs  lib.rs
libil2cpp/: Cargo.toml  all.html  attr.instrument.html  enum.Builtin.html  enum.FindMethodError.html  index.html  macro.debug.html  macro.unsafe_impl_reference_type!.html  macro.unsafe_impl_reference_type.html  macro.unsafe_impl_value_type!.html  macro.unsafe_impl_value_type.html  macro.unsafe_value_type_impl!.html  macro.unsafe_value_type_impl.html  sidebar-items.js  struct.FieldInfo.html  struct.Il2CppArray.html  struct.Il2CppClass.html  struct.Il2CppException.html  struct.Il2CppObject.html  struct.Il2CppReflectionMethod.html  struct.Il2CppReflectionType.html  struct.Il2CppString.html  struct.Il2CppType.html  struct.MethodInfo.html  struct.ParameterInfo.html  struct.Reference.html  struct.Value.html  trait.Argument.html  trait.Arguments.html  trait.CalleeArgument.html  trait.CalleeArguments.html  trait.CalleeReturn.html  trait.CalleeThis.html  trait.Generics.html  trait.ObjectExt.html  trait.Parameter.html  trait.Parameters.html  trait.Return.html  trait.Returned.html  trait.This.html  (+3 more)
libil2cpp/array/: struct.Il2CppArray.html
libil2cpp/class/: enum.FindMethodError.html  struct.Il2CppClass.html
libil2cpp/exception/: struct.Il2CppException.html
libil2cpp/field_info/: struct.FieldInfo.html
libil2cpp/instrument/: index.html  struct.Instrumented.html  struct.WithDispatch.html  trait.Instrument.html  trait.WithSubscriber.html
libil2cpp/method_info/: struct.Il2CppReflectionMethod.html  struct.MethodInfo.html
libil2cpp/object/: struct.Il2CppObject.html  trait.ObjectExt.html
libil2cpp/parameter_info/: struct.ParameterInfo.html
libil2cpp/raw/: constant.ASSEMBLYREF_DISABLEJITCOMPILE_OPTIMIZER_FLAG.html  constant.ASSEMBLYREF_ENABLEJITCOMPILE_TRACKING_FLAG.html  constant.ASSEMBLYREF_FULL_PUBLIC_KEY_FLAG.html  constant.ASSEMBLYREF_RETARGETABLE_FLAG.html  constant.BIG_ENDIAN.html  constant.BUFSIZ.html  constant.BYTE_ORDER.html  constant.EOF.html  constant.EXIT_FAILURE.html  constant.EXIT_SUCCESS.html  constant.FD_SETSIZE.html  constant.FIELD_ATTRIBUTE_ASSEMBLY.html  constant.FIELD_ATTRIBUTE_COMPILER_CONTROLLED.html  constant.FIELD_ATTRIBUTE_FAMILY.html  constant.FIELD_ATTRIBUTE_FAM_AND_ASSEM.html  constant.FIELD_ATTRIBUTE_FAM_OR_ASSEM.html  constant.FIELD_ATTRIBUTE_FIELD_ACCESS_MASK.html  constant.FIELD_ATTRIBUTE_HAS_DEFAULT.html  constant.FIELD_ATTRIBUTE_HAS_FIELD_MARSHAL.html  constant.FIELD_ATTRIBUTE_HAS_FIELD_RVA.html  constant.FIELD_ATTRIBUTE_INIT_ONLY.html  constant.FIELD_ATTRIBUTE_LITERAL.html  constant.FIELD_ATTRIBUTE_NOT_SERIALIZED.html  constant.FIELD_ATTRIBUTE_PINVOKE_IMPL.html  constant.FIELD_ATTRIBUTE_PRIVATE.html  constant.FIELD_ATTRIBUTE_PUBLIC.html  constant.FIELD_ATTRIBUTE_RESERVED_MASK.html  constant.FIELD_ATTRIBUTE_RT_SPECIAL_NAME.html  constant.FIELD_ATTRIBUTE_SPECIAL_NAME.html  constant.FIELD_ATTRIBUTE_STATIC.html  constant.FILENAME_MAX.html  constant.FIXME.html  constant.FOPEN_MAX.html  constant.IL2CPP_API_DYNAMIC_NO_DLSYM.html  constant.IL2CPP_BIG_ENDIAN.html  constant.IL2CPP_BINARY_SECTION_NAME.html  constant.IL2CPP_BYTE_ORDER.html  constant.IL2CPP_CAN_USE_MULTIPLE_SYMBOL_MAPS.html  constant.IL2CPP_CXX_ABI_MSVC.html  constant.IL2CPP_DEBUG.html  (+1017 more)
libil2cpp/raw/functions/: fn.array_class_get.html  fn.array_new.html  fn.assembly_get_image.html  fn.class_from_il2cpp_type.html  fn.class_from_name.html  fn.class_from_system_type.html  fn.class_get_method_from_name.html  fn.class_get_type.html  fn.class_is_assignable_from.html  fn.domain_get.html  fn.domain_get_assemblies.html  fn.field_get_value.html  fn.field_set_value.html  fn.format_exception.html  fn.method_get_from_reflection.html  fn.method_get_object.html  fn.method_is_generic.html  fn.object_new.html  fn.object_unbox.html  fn.raise_exception.html  fn.resolve_icall.html  fn.runtime_invoke.html  fn.string_new_len.html  fn.type_get_name.html  fn.type_get_object.html
libil2cpp/raw/types/: constant.ASSEMBLYREF_DISABLEJITCOMPILE_OPTIMIZER_FLAG.html  constant.ASSEMBLYREF_ENABLEJITCOMPILE_TRACKING_FLAG.html  constant.ASSEMBLYREF_FULL_PUBLIC_KEY_FLAG.html  constant.ASSEMBLYREF_RETARGETABLE_FLAG.html  constant.BIG_ENDIAN.html  constant.BUFSIZ.html  constant.BYTE_ORDER.html  constant.EOF.html  constant.EXIT_FAILURE.html  constant.EXIT_SUCCESS.html  constant.FD_SETSIZE.html  constant.FIELD_ATTRIBUTE_ASSEMBLY.html  constant.FIELD_ATTRIBUTE_COMPILER_CONTROLLED.html  constant.FIELD_ATTRIBUTE_FAMILY.html  constant.FIELD_ATTRIBUTE_FAM_AND_ASSEM.html  constant.FIELD_ATTRIBUTE_FAM_OR_ASSEM.html  constant.FIELD_ATTRIBUTE_FIELD_ACCESS_MASK.html  constant.FIELD_ATTRIBUTE_HAS_DEFAULT.html  constant.FIELD_ATTRIBUTE_HAS_FIELD_MARSHAL.html  constant.FIELD_ATTRIBUTE_HAS_FIELD_RVA.html  constant.FIELD_ATTRIBUTE_INIT_ONLY.html  constant.FIELD_ATTRIBUTE_LITERAL.html  constant.FIELD_ATTRIBUTE_NOT_SERIALIZED.html  constant.FIELD_ATTRIBUTE_PINVOKE_IMPL.html  constant.FIELD_ATTRIBUTE_PRIVATE.html  constant.FIELD_ATTRIBUTE_PUBLIC.html  constant.FIELD_ATTRIBUTE_RESERVED_MASK.html  constant.FIELD_ATTRIBUTE_RT_SPECIAL_NAME.html  constant.FIELD_ATTRIBUTE_SPECIAL_NAME.html  constant.FIELD_ATTRIBUTE_STATIC.html  constant.FILENAME_MAX.html  constant.FIXME.html  (+996 more)
libil2cpp/src/: array.rs  class.rs  exception.rs  field_info.rs  functions.rs  lib.rs  method_info.rs  object.rs  parameter_info.rs  string.rs  ty.rs
libil2cpp/string/: struct.Il2CppString.html
libil2cpp/ty/: enum.Builtin.html  struct.Il2CppReflectionType.html  struct.Il2CppType.html
proc_macros/: Cargo.toml
proc_macros/src/: hook.rs  il2cpp_functions.rs  impl_arguments_parameters.rs  impl_generics.rs  impl_type.rs  lib.rs
(+2286 files in other folders)
