cargo-features = ["edition2021"]

[workspace]
members = ["proc_macros", "inline_hook", "libil2cpp"]

[package]
name = "quest_hook"
version = "0.1.0"
authors = [
    "StackDoubleFlow <ojaslandge@gmail.com>",
    "Raphaël Thériault <self@raftar.io>",
]
repository = "https://github.com/StackDoubleFlow/quest-hook-rs.git"
license = "MIT"
edition = "2021"

[package.metadata.ndk]
targets = ["arm64-v8a"]
platform = 24

[dependencies]
quest_hook_proc_macros = { path = "./proc_macros" }
inline_hook = { path = "./inline_hook" }
libil2cpp = { path = "./libil2cpp", default-features = false }
tracing = { version = "0.1", features = [
    "std",
    "attributes",
], default-features = false, optional = true }
tracing-error = { version = "0.1", default-features = false, optional = true }
tracing-android = { git = "https://github.com/raftario/tracing-android", optional = true }
thiserror = "1"

[features]
default = ["util", "cache"]
unity2019 = ["libil2cpp/unity2019"]
unity2018 = ["libil2cpp/unity2018"]
util = ["tracing", "tracing-error", "tracing-android"]
cache = ["libil2cpp/cache"]
trace = ["libil2cpp/trace"]
strict = ["quest_hook_proc_macros/strict", "libil2cpp/strict"]

[[example]]
name = "hello_world"
crate-type = ["cdylib"]
[[example]]
name = "custom_type"
crate-type = ["cdylib"]
