[workspace]
members = ["proc_macros", "inline_hook", "libil2cpp"]

[package]
name = "quest_hook"
version = "0.1.0"
authors = [
    "StackDoubleFlow <ojaslandge@gmail.com>",
    "Raphaël Thériault <self@raftar.io>",
]
repository = "https://github.com/StackDoubleFlow/quest-hook-rs.git"
license = "MIT"
edition = "2021"

[dependencies]
quest_hook_proc_macros = { path = "./proc_macros" }
inline_hook = { path = "./inline_hook" }
libil2cpp = { path = "./libil2cpp", default-features = false }
cfg-if = "1"
tracing = { version = "0.1", features = [
    "std",
], default-features = false, optional = true }
tracing-subscriber = { version = "0.3", default-features = false, optional = true }
tracing-error = { version = "0.1", default-features = false, optional = true }
paranoid-android = { version = "0.1.2", optional = true }
thiserror = "1"

[target.'cfg(not(target_os = "android"))'.dependencies]
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "smallvec",
], default-features = false, optional = true }

[features]
default = ["util", "cache"]
unity2019 = ["libil2cpp/unity2019"]
unity2018 = ["libil2cpp/unity2018"]
util = ["tracing", "tracing-error", "tracing-subscriber", "paranoid-android"]
cache = ["libil2cpp/cache"]
serde = ["libil2cpp/serde"]
trace = ["libil2cpp/trace"]

[[example]]
name = "hello_world"
crate-type = ["cdylib"]
required-features = ["util"]
[[example]]
name = "custom_type"
crate-type = ["cdylib"]
required-features = ["util"]
