[package]
name = "inline_hook"
version = "0.1.0"
authors = ["StackDoubleFlow <ojaslandge@gmail.com>"]
edition = "2018"

[package.metadata.ndk]
targets = ["arm64-v8a"]
platform = 24

[build-dependencies]
cc = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
