[package]
name = "libil2cpp"
version = "0.1.0"
authors = [
    "StackDoubleFlow <ojaslandge@gmail.com>",
    "Raphaël Thériault <self@raftar.io>",
]
repository = "https://github.com/StackDoubleFlow/quest-hook-rs.git"
license = "MIT"
edition = "2018"

[dependencies]
libloading = "0.7"
paste = "1"
quest_hook_proc_macros = { path = "../proc_macros" }

[features]
default = ["cache"]
strict = []
cache = []
