[package]
name = "libil2cpp"
version = "0.1.0"
authors = [
    "StackDoubleFlow <ojaslandge@gmail.com>",
    "Raphaël Thériault <self@raftar.io>",
]
repository = "https://github.com/StackDoubleFlow/quest-hook-rs.git"
license = "MIT"
edition = "2018"

[dependencies]
quest_hook_proc_macros = { path = "../proc_macros" }
libloading = "0.7"
thiserror = "1"
paste = "1"

[features]
default = ["cache"]
strict = []
cache = []
