[package]
name = "quest_hook_proc_macros"
version = "0.1.0"
authors = [
    "StackDoubleFlow <ojaslandge@gmail.com>",
    "Raphaël Thériault <self@raftar.io>",
]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"

[features]
default = []
strict = []
