[package]
name = "quest_hook_proc_macros"
version = "0.1.0"
authors = [
    "StackDoubleFlow <ojaslandge@gmail.com>",
    "Raphaël Thériault <self@raftar.io>",
]
repository = "https://github.com/StackDoubleFlow/quest-hook-rs.git"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
heck = "0.3"

[features]
default = []
